--- a/notebooks/MCP_FS.ipynb
+++ b/notebooks/MCP_FS.ipynb
@@ -4,8 +4,8 @@
   "metadata": {
     "colab": {
       "name": "MCP_FS.ipynb",
-      "provenance": [],
       "private_outputs": true,
+      "provenance": [],
       "collapsed_sections": [
         "Wf9CIYBVP67k",
         "lsLiLlIajlRu",
@@ -52,7 +52,7 @@
         "\n",
         "# Github \n",
         "repository = \"MCP-FS\"\n",
-        "branch = \"collab\"\n",
+        "branch = \"master\"\n",
         "repository_base = \"nathanielsimard\""
       ],
       "execution_count": null,
@@ -184,6 +184,7 @@
         "\n",
         "cmd_install = cmd_load_env + [\n",
         "  \"conda env update -f environment.yml\",\n",
+        "  \"pip install ipykernel\",\n",
         "  \"pip install -e .\",\n",
         "]\n",
         "\n"
@@ -215,10 +216,31 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "xDGQQzoJZ7I1"
+      },
+      "source": [
+        "### Run paths"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VgxC3r4nZ37a"
+      },
+      "source": [
+        "config = \"config/fast.yml\"\n",
+        "output = \"/data/test/results\""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "V7nwb4Ergkxw"
       },
       "source": [
-        "### Run the prohect"
+        "### Train\n"
       ]
     },
     {
@@ -229,19 +251,59 @@
       "source": [
         "cmd_train = cmd_load_env + [\n",
         "  \"git pull\",\n",
-        "  f\"./scripts/train.py -c config/test.yml -o /data/test/results -d cuda\",\n",
-        "]"
+        "  f\"./scripts/train.py -c {config} -o {output} -d cuda\",\n",
+        "]\n",
+        "run(cmd_train, root=f\"~/{repository}\")"
       ],
       "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "4uFiwBvSKucC"
+        "id": "Sk67x-1pZoq2"
       },
       "source": [
-        "run(cmd_train, root=f\"~/{repository}\")"
+        "### Test"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "smCR2YB9-XYz"
+      },
+      "source": [
+        "cmd_eval = cmd_load_env + [\n",
+        "  \"git pull\",\n",
+        "  f\"./scripts/eval.py -r {output} -d cuda\",\n",
+        "]\n",
+        "run(cmd_eval, root=f\"~/{repository}\")"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "V1Wt6J6GZsaq"
+      },
+      "source": [
+        "### Vizualization"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XHfLu65Nbvo9"
+      },
+      "source": [
+        "cmd_viz = cmd_load_env + [\n",
+        "  \"cd /root/MCP-FS\",\n",
+        "  \"pwd\",\n",
+        "  \"git pull\",\n",
+        "  f\"./scripts/viz.py -r {output}\",\n",
+        "]\n",
+        "run(cmd_viz)"
       ],
       "execution_count": null,
       "outputs": []
@@ -266,7 +328,7 @@
         "          f\"tar -czvf results.tar.gz {path}\",\n",
         "    ])\n",
         "\n",
-        "compressd(\"/path/to/results\")"
+        "compress(\"/data/test/results\")"
       ],
       "execution_count": null,
       "outputs": []
