--- a/notebooks/improving-fs-ssl.ipynb
+++ b/notebooks/improving-fs-ssl.ipynb
@@ -26,7 +26,9 @@
         "id": "jWU9OWEBPY4g"
       },
       "source": [
-        "# Run MCF-FS project with Collab"
+        "# Improving Few-Shot Learning with Auxiliary Self-Supervised Pretext Tasks\n",
+        "\n",
+        "Run the project with Collab Free GPU 😁!!"
       ]
     },
     {
@@ -46,12 +48,8 @@
       "source": [
         "from getpass import getpass\n",
         "\n",
-        "# Github\n",
-        "username = input(\"Github Username: \\n\")\n",
-        "password = getpass(f\"Github '{username}' Password: \\n\")\n",
-        "\n",
         "# Github \n",
-        "repository = \"MCP-FS\"\n",
+        "repository = \"improving-fs-ssl\"\n",
         "branch = \"master\"\n",
         "repository_base = \"nathanielsimard\""
       ],
@@ -109,9 +107,8 @@
         "id": "Kl6P5ka0BrgZ"
       },
       "source": [
-        "run(\"git config --global credential.helper store\")\n",
         "run([\n",
-        "     f\"git clone https://{username}:{password}@github.com/{repository_base}/{repository}.git\",\n",
+        "     f\"git clone https://github.com/{repository_base}/{repository}.git\",\n",
         "])\n"
       ],
       "execution_count": null,
@@ -171,7 +168,7 @@
       },
       "source": [
         "# Commands\n",
-        "env_name = \"MCP-FS\"\n",
+        "env_name = \"improving-fs-ssl\"\n",
         "cmd_create_env = [\n",
         "  \". ~/miniconda3/etc/profile.d/conda.sh\",\n",
         "  f\"conda create -n {env_name}\",              \n",
@@ -228,7 +225,7 @@
         "id": "VgxC3r4nZ37a"
       },
       "source": [
-        "config = \"config/fast.yml\"\n",
+        "config = \"config/cifar_fs.yml config/supervised_byol.yml config/seed_1.yml\"\n",
         "output = \"/data/test/results\""
       ],
       "execution_count": null,
@@ -251,7 +248,7 @@
       "source": [
         "cmd_train = cmd_load_env + [\n",
         "  \"git pull\",\n",
-        "  f\"./scripts/train.py -c {config} -o {output} -d cuda\",\n",
+        "  f\"./scripts/train.py -c {config} -o {output} -d cpu\",\n",
         "]\n",
         "run(cmd_train, root=f\"~/{repository}\")"
       ],
